# pq-richquery

./: CMakeLists.txt  README.md  connection.cpp  connection.h  lock.cpp  lock.h  parambuilder.cpp  parambuilder.h  parameter.cpp  parameter.h  pool.cpp  pool.h  poolactions.cpp  poolactions.h  poolactionsfunctionaltest.cpp  pooltest.cpp  postgrepool.cpp  postgrepool.h  query.cpp  query.h  queryfunctionaltest.cpp  querytemplate.cpp  querytemplate.h  result.cpp  result.h  row.cpp  row.h  templatefunctionaltest.cpp  time.cpp  time.h  transaction.cpp  transaction.h
